syntax = "proto3";

package bidder;

service BidderService {
    rpc SendAuctionUpdate (AuctionUpdateRequest) returns (AuctionUpdateResponse);
    rpc CreateLobby (CreateLobbyRequest) returns (CreateLobbyResponse);
}

message AuctionUpdateRequest {
    uint32 auctionId = 1;
    repeated Bid bids = 2;
    string auctionStatus = 3;
    uint32 remainingTime = 4;
}
  
message Bid {
    uint32 bidderId = 1;
    double bidAmount = 2;
}

message AuctionUpdateResponse {
    string message = 1;
}

message CreateLobbyRequest {
    uint32 auctionId = 1;
}

message CreateLobbyResponse {
    string message = 1;
}